--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,16 @@
   themes: all;
   }
   
+  @keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
+  
+  .fade-out {
+    animation: fadeOut 1s ease-in-out forwards;
+  }
+  
